@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12789 2006/02/04 13:45:52 wiz Exp $
+$NetBSD: CHANGES,v 1.12790 2006/02/04 15:09:49 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -797,3 +797,5 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated sysutils/cdrtools-ossdvd to 2.01.1.36 [wiz 2006-02-04]
 	Updated graphics/xfig to xfig-3.2.5alpha5nb1 [markd 2006-02-04]
 	Updated devel/glade2-gnome to 2.10.0nb3 [wiz 2006-02-04]
+	Updated devel/cpuflags to 0.97 [abs 2006-02-04]
+
